to use message prop